--- a/views/tailor/adddeal.handlebars
+++ b/views/tailor/adddeal.handlebars
@@ -41,8 +41,23 @@
                                             value="" required>
                                     </div>
                                     <br>
-                                    {{!-- <label for="event">Event<span style="color: red;">*</span></label>
-                                    <div class="checkout-account">
+                                    <label for="event">Event<span style="color: red;">*</span></label>
+                                    <ul class="category-select-list">
+                                        <ul class="category-select-list">
+                                            <li><input type="radio" id="New Store Opening" value="New Store Opening" name="event"><label for="New Store Opening" style="font-style: italic;">New Store Opening</label></li>
+                                            <div>Start: <span style="color:red;"> 18 Aug 2021, </span>Wednesday (12:00AM)</div>
+                                            <div>End: <span style="color:red;"> 18 Aug 2021, </span>Wednesday (11:59PM)</div>
+                                            <br>
+                                            <li><input type="radio" id="9.9 Flash Sales" value="9.9 Flash Sales" name="event"><label for="9.9 Flash Sales" style="font-style: italic;">9.9 Flash Sales</label></li>
+                                            <div>Start: <span style="color:red;"> 09 Sep 2021, </span>Thursday (12:00AM)</div>
+                                            <div>End: <span style="color:red;"> 09 Sep 2021, </span>Thursday (11:59PM)</div>
+                                            <br>
+                                            <li><input type="radio" id="10.10 Flash Sales" value="10.10 Flash Sales" name="event"><label for="10.10 Flash Sales" style="font-style: italic;">10.10 Flash Sales</label></li>
+                                            <div>Start: <span style="color:red;"> 10 Oct 2021, </span>Sunday (12:00AM)</div>
+                                            <div>End: <span style="color:red;"> 10 Oct 2021, </span>Sunday (11:59PM)</div>
+                                        </ul>
+                                    </ul>                                    
+                                    {{!-- <div class="checkout-account">
                                         <input type="checkbox">
                                         <span>EVENT ONE</span>
                                     </div>
@@ -58,13 +73,12 @@
                                         <input type="checkbox">
                                         <span>EVENT THREE</span>
                                     </div>
-                                    <div>EVENT THREE Description</div>
-                                    <br><br>
-                                    <div class="button-box">
+                                    <div>EVENT THREE Description</div> --}}
+                                    {{!-- <div class="button-box">
                                         <button type="submit" class="btn btn-outline-info"
                                             style="font-size: 14px; font-weight: 420; padding-top: 8px; padding-bottom: 8px;padding-left: 28px; padding-right: 28px"><span>Confirm</span></button>
                                     </div> --}}
-                                    <div class="billing-info mb-20">
+                                    {{!-- <div class="billing-info mb-20">
                                         <label for="name">Start Date</label>
                                         <input id="datepicker" name="dstartdate" class="form-control"
                                             type="text" value=" ">
@@ -74,8 +88,7 @@
                                         <label for="name">End Date</label>
                                         <input id="datepicker2" name="dexpirydate" class="form-control"
                                             type="text" value=" ">
-                                    </div>
-                                    <br>
+                                    </div> --}}
                                     <div class="button-box">
                                         <button type="submit" class="btn btn-outline-info"
                                             style="font-size: 14px; font-weight: 420; padding-top: 8px; padding-bottom: 8px;padding-left: 28px; padding-right: 28px"><span>Confirm</span></button>
