--- a/views/customer/review.handlebars
+++ b/views/customer/review.handlebars
@@ -25,11 +25,13 @@
                               <input type="radio" id="r5" name="rg1" value="1" onclick="getRadioValue()">
                               <label for="r5">&#9733;</label>
                             </div>
-                                <input class="form-control" id="stars" name="stars" type="hidden" value="">
+                                <input class="form-control" id="stars" name="stars" type="hidden" value="{{stars}}">
                                 <input class="form-control" id="storename" name="storename" type="hidden" value="{{pdetails.storename}}">
                             <div class="col-lg-12">
                                 <label for="review">Leave a Review</label>
-                                <textarea id="review" name="review"></textarea>
+                                <textarea id="review" name="review">{{review}}</textarea>
+                                <span style="float:right">Maximum characters: <span id="dcount">0</span>/2000</span> <span id="maxCountReached" style="color:red; display: none;">(Max characters reached!)</span>
+                                <br><br>
                             </div>
                             <div class="uploader">
                                 <input id="file-upload" type="file" name="file" accept="image/*" />
@@ -63,6 +65,13 @@
 <br>
 
 <script>
+    var review = document.getElementById('review');
+    var dcount = document.getElementById('dcount');
+    var maxCountReached = document.getElementById('maxCountReached');
+
+    window.onload = function() {
+        checkreview();
+    }
     // Get number of stars whenever clicked.
     function getRadioValue() {
         var radios = document.getElementsByName('rg1');
@@ -97,4 +106,19 @@
     }
 
     setRadioValue();
+
+    review.addEventListener('keyup', function(e){
+        checkreview();
+    });
+
+    function checkreview(){
+        if (review.value.length > 2000) {
+            review.value = review.value.slice(0, 2000);
+            maxCountReached.style.display= '';
+        }
+        else {
+            maxCountReached.style.display= 'none';
+        }
+        dcount.innerText = review.value.length;
+    }
 </script>
