--- a/views/customer/viewshops.handlebars
+++ b/views/customer/viewshops.handlebars
@@ -3,7 +3,7 @@
         <div class="breadcrumb-content text-center">
             <ul>
                 <li>
-                    <a href="/homecust">Home</a>
+                    <a href="/customer/homecust">Home</a>
                 </li>
                 <li class="active">View Shop</li>
             </ul>
@@ -14,7 +14,6 @@
     <div class="container">
         <div class="row flex-row-reverse">
             <div class="col-lg-9">
-                
                 <div class="shop-bottom-area mt-35">
                     <div class="tab-content jump">
                         <div id="shop-1" class="tab-pane active">
