--- a/views/customer/viewshops.handlebars
+++ b/views/customer/viewshops.handlebars
@@ -5,7 +5,7 @@
                 <li>
                     <a href="/customer/homecust">Home</a>
                 </li>
-                <li class="active">View Shop</li>
+                <li class="active">View Shops</li>
             </ul>
         </div>
     </div>
@@ -14,6 +14,7 @@
     <div class="container">
         <div class="row flex-row-reverse">
             <div class="col-lg-9">
+                
                 <div class="shop-bottom-area mt-35">
                     <div class="tab-content jump">
                         <div id="shop-1" class="tab-pane active">
