--- a/views/customer/viewstore.handlebars
+++ b/views/customer/viewstore.handlebars
@@ -3,7 +3,7 @@
         <div class="breadcrumb-content text-center">
             <ul>
                 <li>
-                    <a href="/homecust">Home</a>
+                    <a href="/customer/homecust">Home</a>
                 </li>
                 <li>
                     <a href="/viewshops">View Shops</a>
@@ -19,10 +19,10 @@
             <div class="col-lg-12">
                 <div class="shop-top-bar mb-35">
                     <div class="select-shoing-wrap">
-                        <p>Showing {{min_item}}–{{max_item}} of {{total_count}} result(s)</p>
+                        {{#if shopprod}}<p>Showing {{min_item}}–{{max_item}} of {{total_count}} result(s)</p>{{/if}}
                     </div>
                     <div class="filter">
-                        {{#ifCond user_status '!=' "tailor"}}
+                        {{#ifCond user.usertype '!=' "tailor"}}
                         <form action="/chatwith/{{storename}}" method="post">
                             <button style="border: 0; padding: 0; display: inline; background: none; text-decoration: underline;"><i class="pe-7s-chat"></i> Seek help from {{storename}}</button>
                         </form>
