--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,6 +27,9 @@
     <script src="https://kit.fontawesome.com/8f1e06b39f.js" crossorigin="anonymous"></script>
     <!-- Socket IO -->
     <script src="/socket.io/socket.io.js"></script>
+    <script>//////////////////////// Socket IO ////////////////////////////////
+        var io = io();
+    </script>
 </head>
 {{!-- {{#ifIncludes window.location.pathname "rider/" }}
 {{>_rnavbar}}
@@ -73,8 +76,28 @@
     <script src="/js/ajax-mail.js"></script>
     <!-- Main JS -->
     <script src="/js/main.js"></script>
-    <!-- Notification Client JS -->
-    <script src="/js/notification.js"></script>
+     <script>
+        io.on("send_notification", function (data) {
+            console.log(data);
+            const notidiv = document.createElement('div');
+            notidiv.className = 'notification-inner';
+            //notidiv.onclick = "location.href='/" + data.hyperlink;
+            notidiv.id = 'notification-unread';
+            notidiv.innerHTML = `<div style="position: relative; float: right;">
+                                    <a href="/deleteNoti/${data.id}"><i class="fa fa-times" title="Delete this notification"></i></a>
+                                </div>
+                                ${data.message}
+                                <div style="font-size:10px">
+                                    <i class="fa fa-rss"></i>
+                                    ${data.timestamp}
+                                </div>`;
+
+            document.getElementById('notificationsContent').prepend(notidiv);
+            var new_noti = document.getElementById("new_noti").innerText;
+            new_noti = parseInt(new_noti) + 1;
+            document.getElementById("new_noti").innerText = new_noti;
+        });
+    </script>
 </body>
 {{>_footer}}
 
