--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -58,12 +58,17 @@
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="footer-widget mb-30 ml-70">
                     <div class="footer-title">
+                        {{#ifCond user.usertype '==' "admin"}}
+                        <h3>ADMIN</h3>
+                        {{else}}
                         <h3>SUBSCRIBE</h3>
+                        {{/ifCond}}
                     </div>
                     <div class="subscribe-style">
+                        {{#ifCond user.usertype '!=' "admin"}}
                         <p>Get E-mail updates about our latest shop and special offers.</p>
                         <div id="mc_embed_signup" class="subscribe-form">
-                            <form id="mc-embedded-subscribe-form" class="validate" novalidate="" target="_blank" name="mc-embedded-subscribe-form" method="post" action="http://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&amp;id=05d85f18ef">
+                            {{!-- <form id="mc-embedded-subscribe-form" class="validate" novalidate="" target="_blank" name="mc-embedded-subscribe-form" method="post" action="http://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&amp;id=05d85f18ef">
                                 <div id="mc_embed_signup_scroll" class="mc-form">
                                     <input class="email" type="email" required="" placeholder="Enter your email here.." name="EMAIL" value="">
                                     <div class="mc-news" aria-hidden="true">
@@ -73,7 +78,13 @@
                                         <input id="mc-embedded-subscribe" class="button" type="submit" name="subscribe" value="Subscribe">
                                     </div>
                                 </div>
-                            </form>
+                            </form> --}}
+                            {{else}}
+                            <ul>
+                                <li><a href="/createNotifications">Notifications</a></li>
+                                
+                            </ul>
+                            {{/ifCond}}
                         </div>
                     </div>
                 </div>
