--- a/views/tailor/addproduct.handlebars
+++ b/views/tailor/addproduct.handlebars
@@ -54,7 +54,8 @@
                             <div class="col-lg-12">
                                 <label for="description">Description</label>
                                 <textarea id="description" name="description">{{description}}</textarea>
-                                <br>
+                                <span style="float:right">Maximum characters: <span id="dcount">0</span>/2000</span> <span id="maxCountReached" style="color:red; display: none;">(Max characters reached!)</span>
+                                <br><br>
                             </div>
                             
                             <div class="form-subcategory" role="button" aria-pressed="false" tabindex="0" data-toggle="collapse" data-target="#extraqn">
@@ -68,7 +69,7 @@
                                 </div>
                                 <div class="col-lg-12">
                                     <label for="q1">Question<span style="color:red;">*</span></label>
-                                    <input id="question" name="question" type="text" value="{{question}}">
+                                    <input id="question" name="question" type="text" value="{{question1}}">
                                 </div>
                                 <div class="col-lg-12">
                                     <label for="q1category">Category<span style="color:red;">*</span></label>
@@ -103,8 +104,12 @@
 
 <script>
     var fieldNum = 0;
+    var pDescription = document.getElementById('description');
+    var dcount = document.getElementById('dcount');
+    var maxCountReached = document.getElementById('maxCountReached');
     window.onload = function() {
         checkValue();
+        checkDesc();
         {{!-- var newInput = $("<input></input>")
                 .attr("class", "form-control")
                 .attr("id", "flist" + fieldNum)
@@ -152,5 +157,19 @@
         }
     }
 
+    // Copy this part over to update product n reviews
+    pDescription.addEventListener('keyup', function(e){
+        checkDesc();
+    });
 
+    function checkDesc(){
+        if (pDescription.value.length > 2000) {
+            pDescription.value = pDescription.value.slice(0, 2000);
+            maxCountReached.style.display= '';
+        }
+        else {
+            maxCountReached.style.display= 'none';
+        }
+        dcount.innerText = pDescription.value.length;
+    }
 </script>
