--- a/views/tailor/editproduct.handlebars
+++ b/views/tailor/editproduct.handlebars
@@ -56,6 +56,8 @@
                             <div class="col-lg-12">
                                 <label for="description">Description</label>
                                 <textarea id="description" name="description">{{pdetails.description}}</textarea>
+                                <span style="float:right">Maximum characters: <span id="dcount">0</span>/2000</span> <span id="maxCountReached" style="color:red; display: none;">(Max characters reached!)</span>
+                                <br>
                                 <br>
                             </div>
                             
@@ -126,11 +128,15 @@
 
 <script>
     var fieldNum = 0;
+    var pDescription = document.getElementById('description');
+    var dcount = document.getElementById('dcount');
+    var maxCountReached = document.getElementById('maxCountReached');
     {{#if pchoices.length}}
         fieldNum = {{pchoices.length}};
     {{/if}}
     window.onload = function() {
         checkValue();
+        checkDesc();
         {{!-- var newInput = $("<input></input>")
                 .attr("class", "form-control")
                 .attr("id", "flist" + fieldNum)
@@ -178,5 +184,18 @@
         }
     }
 
+    pDescription.addEventListener('keyup', function(e){
+        checkDesc();
+    });
 
+    function checkDesc(){
+        if (pDescription.value.length > 2000) {
+            pDescription.value = pDescription.value.slice(0, 2000);
+            maxCountReached.style.display= '';
+        }
+        else {
+            maxCountReached.style.display= 'none';
+        }
+        dcount.innerText = pDescription.value.length;
+    }
 </script>
